--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             Dominate Roblox games and enhance your gaming experience like never before.
         </p>
         <div class="button-container">
-            <a class="button" href="https://example-executor-link.com">Get Started</a>
+            <a class="button" href="https://github.com/Blood-Gang-Inc/sa-zserverside">Get Started</a>
         </div>
     </div>
 </body>
