--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
         <h1>Super Fast Executor - SAZ</h1>
         <p>
-            Unlock the power of the Super Fast Executor with the key SAZ. 
+            Unlock the power of the Super Fast Executor with SAZ. 
             Dominate Roblox games and enhance your gaming experience like never before.
         </p>
         <div class="button-container">
