--- a/index.html
+++ b/index.html
@@ -25,6 +25,13 @@
             text-decoration: none;
             border-radius: 4px;
         }
+        .access-key {
+            margin-top: 20px;
+            border: 1px solid #ccc;
+            padding: 10px;
+            background-color: #f0f0f0;
+            border-radius: 4px;
+        }
     </style>
 </head>
 <body>
@@ -36,6 +43,10 @@
         </p>
         <div class="button-container">
             <a class="button" href="https://github.com/Blood-Gang-Inc/sa-zserverside">Get Started</a>
+        </div>
+        <div class="access-key">
+            <p>Access Key: SAZ</p>
+            <p>By using this access key, you agree to our terms of use.</p>
         </div>
     </div>
 </body>
