--- a/index.html
+++ b/index.html
@@ -1,52 +1,54 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Super Fast Executor - SAZ</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 20px;
-        }
-        h1 {
-            font-size: 24px;
-        }
-        p {
-            font-size: 16px;
-        }
-        .container {
-            text-align: center;
-        }
-        .button {
-            display: inline-block;
-            padding: 10px 20px;
-            background-color: #007BFF;
-            color: white;
-            text-decoration: none;
-            border-radius: 4px;
-        }
-        .access-key {
-            margin-top: 20px;
-            border: 1px solid #ccc;
-            padding: 10px;
-            background-color: #f0f0f0;
-            border-radius: 4px;
-        }
-    </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About Saz</title>
 </head>
 <body>
     <div class="container">
-        <h1>Super Fast Executor - SAZ</h1>
-        <p>
-            Unlock the power of the Super Fast Executor with SAZ. 
-            Dominate Roblox games and enhance your gaming experience like never before.
-        </p>
-        <div class="button-container">
-            <a class="button" href="https://github.com/Blood-Gang-Inc/sa-zserverside">Get Started</a>
+        <h1>About Saz 📝</h1>
+        <div class="section">
+            <h2>😊 Introduction</h2>
+            <p>Saz is a fast and easy-to-use Roblox executor designed to enhance your gaming experience. It provides a wide range of powerful features for game manipulation, allowing you to explore, experiment, and enjoy Roblox games in new and exciting ways.</p>
         </div>
-        <div class="access-key">
-            <p>Access Key: SAZ</p>
-            <p>By using this access key, you agree to our terms of use.</p>
+        <div class="section">
+            <h2>Command Documentation 📘</h2>
+            <p>Below are some of the commonly used commands with Saz:</p>
+        </div>
+        <div class="section">
+            <h2>Commands 💘</h2>
+            <ul>
+                <li><a href="https://github.com/F3XTeam/RBX-Building-Tools" target="_blank">F3X</a> <span>→ (Auto Updates)</span></li>
+                <li><a href="https://roblox.fandom.com/wiki/R6" target="_blank">R6</a> - <del>→ Blow stuff up and have fun!</del> <span>:(</span></li>
+                <li><a href="https://create.roblox.com/docs/characters" target="_blank">NPC</a></li>
+            </ul>
+        </div>
+        <div class="section">
+            <h2>Credits 📜</h2>
+            <p>Saz is brought to you by the talented individuals and contributors who have worked hard to develop and improve its features. We would like to express our gratitude to the following contributors:</p>
+            <ul>
+                <li><a href="https://degenerates2.carrd.co/#l4zx16" target="_blank">4zx16</a> — Owner (Modules, Systems, Features, Commands)</li>
+                <li><a href="https://www.roblox.com/users/62857002/profile" target="_blank">christopherdis</a> — UI</li>
+                <li><a href="https://degenerates2.carrd.co/#l7zh14" target="_blank">7zh14</a> — Uploading the Punishment Module & keeping it updated.</li>
+                <!-- Add more contributors as needed -->
+            </ul>
+            <p>We appreciate the dedication and hard work of our contributors in making Saz a powerful and enjoyable tool for the Roblox community.</p>
+        </div>
+        <div class="section">
+            <h2>Admin System(s) Supported 🛡️</h2>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=uP-Q_4QyTaU&pp=ygUTbW1sICByb2Jsb3ggZXhwbG9pdA%3D%3D" target="_blank">MML</a></li>
+                <li><a href="https://github.com/EdgeIY/infiniteyield" target="_blank">IY</a></li>
+                <li><a href="https://github.com/Epix-Incorporated/Adonis/wiki" target="_blank">Adonis</a></li>
+                <li><a href="https://github.com/1ForeverHD/HDAdminV2" target="_blank">HD Admin</a></li>
+                <li><a href="https://kohls-admin-house.fandom.com/wiki/Admin_Commands" target="_blank">Kohls</a></li>
+            </ul>
+        </div>
+        <div class="button-container">
+            <a class="button" href="https://linkr.it/saz" target="_blank">
+                <img src="https://files.catbox.moe/qp6vlr.jpg" alt="Discord's Logo" style="vertical-align: middle;">
+            </a>
         </div>
     </div>
 </body>
