--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Saz</title>
      <link rel="stylesheet" href="styles.css">
+     <link rel="icon" type="image/x-icon" href="https://i.pinimg.com/236x/f2/f2/73/f2f2730848d51c55541dd0c367377d2a.jpg">
 </head>
 <body>
     <div class="container">
