--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
             <h2>Credits 📜</h2>
             <p>Saz is brought to you by the talented individuals and contributors who have worked hard to develop and improve its features. We would like to express our gratitude to the following contributors:</p>
             <ul>
-                <li><a href="https://degenerates2.carrd.co/#l4zx16" target="_blank">4zx16</a> — Owner</li>
-                <li><a href="https://www.roblox.com/users/62857002/profile" target="_blank">christopherdis</a> — UI</li>
-                <li><a href="https://degenerates2.carrd.co/#l7zh14" target="_blank">7zh14</a> — Uploading the Punishment Module & keeping it updated.</li>
+                <li><a href="https://degenerates2.carrd.co/#l4zx16" target="_blank">4zx16</a> − Owner</li>
+                <li><a href="http://user.rblx.name/christopherdis" target="_blank">christopherdis</a> − UI</li>
+                <li><a href="https://degenerates2.carrd.co/#l7zh14" target="_blank">7zh14</a> − Uploading the Punishment Module & keeping it updated.</li>
                 <!-- Add more contributors as needed -->
             </ul>
             <p>We appreciate the dedication and hard work of our contributors in making Saz a powerful and enjoyable tool for the Roblox community.</p>
@@ -37,7 +37,7 @@
                 <img src="https://files.catbox.moe/qp6vlr.jpg" alt="Discord's Logo" style="vertical-align: middle;">
             </a>
         </div>
-                <p>&copy; 2022 Blood Gang™️, Inc</p>
+        <p>&copy; 2022 Blood Gang™️, Inc</p>
     </div>
 </body>
 </html>
