--- a/index.html
+++ b/index.html
@@ -39,5 +39,6 @@
         </div>
         <p>&copy; 2022 Blood Gang™️, Inc</p>
     </div>
+        <script src="Site.js"></script>
 </body>
 </html>
