--- a/index.html
+++ b/index.html
@@ -1,44 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Saz</title>
-     <link rel="stylesheet" href="styles.css">
-     <link rel="icon" type="image/x-icon" href="https://i.pinimg.com/236x/f2/f2/73/f2f2730848d51c55541dd0c367377d2a.jpg">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="icon" type="image/x-icon" href="https://i.pinimg.com/236x/f2/f2/73/f2f2730848d51c55541dd0c367377d2a.jpg">
 </head>
 <body>
     <div class="container">
-        <script src="Site.js"></script>
-        <div class="section">
-            <h2>😊 Introduction</h2>
-            <p>Saz is a fast and easy-to-use Roblox executor designed to enhance your gaming experience. It provides a wide range of powerful features for game manipulation, allowing you to explore, experiment, and enjoy Roblox games in new and exciting ways.</p>
-        </div>
-        <div class="section">
+        <!-- Introduction Section -->
+        <section class="section">
+            <h2>Introduction 😊</h2>
+            <p>Saz is a fast and easy-to-use Roblox executor designed to elevate your gaming experience. With a wide range of powerful features for game manipulation, it enables users to explore, experiment, and enjoy Roblox games in new, exciting ways.</p>
+        </section>
+        <!-- Commands Section -->
+        <section class="section">
             <h2>Commands 💘</h2>
             <ul>
-                <li><a href="https://github.com/F3XTeam/RBX-Building-Tools" target="_blank">F3X</a> <span>→ (Auto Updates)</span></li>
-                <li><a href="https://roblox.fandom.com/wiki/R6" target="_blank">R6</a> - <del>→ Blow stuff up and have fun!</del> <span>:(</span></li>
-                <li><a href="https://create.roblox.com/docs/characters" target="_blank">NPC</a></li>
+                <li><a href="https://github.com/F3XTeam/RBX-Building-Tools" target="_blank">F3X</a> <span>(Auto Updates)</span></li>
+                <li><a href="https://roblox.fandom.com/wiki/R6" target="_blank">R6</a> <del>→ Blow stuff up and have fun!</del> <span>:(</span></li>
+                <li><a href="https://create.roblox.com/docs/characters" target="_blank">NPC</a> - Build and customize</li>
             </ul>
-        </div>
-        <div class="section">
+        </section>
+        <!-- Credits Section -->
+        <section class="section">
             <h2>Credits 📜</h2>
-            <p>Saz is brought to you by the talented individuals and contributors who have worked hard to develop and improve its features. We would like to express our gratitude to the following contributors:</p>
+            <p>We proudly recognize the talented individuals and contributors whose efforts have shaped Saz into a robust tool. Special thanks go to the following contributors:</p>
             <ul>
-                <li><a href="https://degenerates2.carrd.co/#l4zx16" target="_blank">4zx16</a> − Owner</li>
-                <li><a href="http://user.rblx.name/christopherdis" target="_blank">christopherdis</a> − UI</li>
-                <li><a href="https://degenerates2.carrd.co/#l7zh14" target="_blank">7zh14</a> − Uploading the Punishment Module & keeping it updated.</li>
+                <li><a href="https://degenerates2.carrd.co/#l4zx16" target="_blank">4zx16</a> − Founder & Lead Developer</li>
+                <li><a href="http://user.rblx.name/christopherdis" target="_blank">christopherdis</a> − User Interface Designer</li>
+                <li><a href="https://degenerates2.carrd.co/#l7zh14" target="_blank">7zh14</a> − Punishment Module Developer & Maintainer</li>
                 <!-- Add more contributors as needed -->
             </ul>
-            <p>We appreciate the dedication and hard work of our contributors in making Saz a powerful and enjoyable tool for the Roblox community.</p>
-        </div>
+            <p>We deeply appreciate their commitment and hard work in making Saz an outstanding tool for the Roblox community.</p>
+        </section>
+        <!-- Call to Action Section -->
         <div class="button-container">
             <a class="button" href="https://linkr.it/saz" target="_blank">
-                <img src="https://files.catbox.moe/qp6vlr.jpg" alt="Discord's Logo" style="vertical-align: middle;">
+                <img src="https://files.catbox.moe/qp6vlr.jpg" alt="Join our Discord" style="vertical-align: middle;">
             </a>
         </div>
-        <p>&copy; 2022 Blood Gang™️, Inc</p>
+        <!-- Footer -->
+        <footer>
+            <p>&copy; 2022 Blood Gang™, Inc. All rights reserved.</p>
+        </footer>
     </div>
+    <script src="Site.js"></script>
 </body>
 </html>
