--- a/index.html
+++ b/index.html
@@ -4,38 +4,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saz</title>
+    <title>Saz - Roblox Executor</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" type="image/x-icon" href="https://i.pinimg.com/236x/f2/f2/73/f2f2730848d51c55541dd0c367377d2a.jpg">
 </head>
+
 <body>
     <div class="container">
         <!-- Introduction Section -->
         <section class="section">
-            <h2>Introduction 😊</h2>
-            <p>Saz is a fast and easy-to-use Roblox executor designed to elevate your gaming experience. With a wide range of powerful features for game manipulation, it enables users to explore, experiment, and enjoy Roblox games in new, exciting ways.</p>
+            <h2>Welcome to Saz 😊</h2>
+            <p>
+                <strong>Saz</strong> is a fast and easy-to-use Roblox executor designed to enhance your gaming experience. 
+                Explore new possibilities with powerful tools for game manipulation, giving you the freedom to experiment and interact with Roblox games in exciting new ways.
+            </p>
         </section>
+
         <!-- Commands Section -->
         <section class="section">
             <h2>Commands 💘</h2>
             <ul>
                 <li><a href="https://github.com/F3XTeam/RBX-Building-Tools" target="_blank">F3X</a> <span>(Auto Updates)</span></li>
                 <li><a href="https://roblox.fandom.com/wiki/R6" target="_blank">R6</a> <del>→ Blow stuff up and have fun!</del> <span>:(</span></li>
-                <li><a href="https://create.roblox.com/docs/characters" target="_blank">NPC</a> - Build and customize</li>
+                <li><a href="https://create.roblox.com/docs/characters" target="_blank">NPC</a> - Build and customize characters</li>
             </ul>
         </section>
+
         <!-- Credits Section -->
         <section class="section">
             <h2>Credits 📜</h2>
-            <p>We proudly recognize the talented individuals and contributors whose efforts have shaped Saz into a robust tool. Special thanks go to the following contributors:</p>
+            <p>
+                We proudly recognize the talented individuals and contributors whose efforts have shaped <strong>Saz</strong> into a robust and powerful tool. Special thanks to the following contributors:
+            </p>
             <ul>
                 <li><a href="https://degenerates2.carrd.co/#l4zx16" target="_blank">4zx16</a> − Founder & Lead Developer</li>
                 <li><a href="http://user.rblx.name/christopherdis" target="_blank">christopherdis</a> − User Interface Designer</li>
                 <li><a href="https://degenerates2.carrd.co/#l7zh14" target="_blank">7zh14</a> − Punishment Module Developer & Maintainer</li>
-                <!-- Add more contributors as needed -->
             </ul>
             <p>We deeply appreciate their commitment and hard work in making Saz an outstanding tool for the Roblox community.</p>
         </section>
+
         <!-- Call to Action Section -->
         <div class="button-container">
             <a class="button" href="https://linkr.it/saz" target="_blank">
