--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <section class="section">
             <h2>Welcome to Saz 😊</h2>
             <p>
-                <strong>Saz</strong> is a fast and easy-to-use Roblox executor designed to enhance your gaming experience. 
-                Explore new possibilities with powerful tools for game manipulation, giving you the freedom to experiment and interact with Roblox games in exciting new ways.
+                <strong>Saz</strong> is a user-friendly Roblox executor that enhances your gaming experience by providing powerful tools for game manipulation, allowing you to explore and interact with Roblox games in innovative ways.
             </p>
         </section>
 
