--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
         </section>
 
         <!-- Commands Section -->
-        <section class="section">
-            <h2>Commands 💘</h2>
-            <ul>
-                <li><a href="https://github.com/F3XTeam/RBX-Building-Tools" target="_blank">F3X</a> <span>(Auto Updates)</span></li>
-                <li><a href="https://roblox.fandom.com/wiki/R6" target="_blank">R6</a> <del>→ Blow stuff up and have fun!</del> <span>:(</span></li>
-                <li><a href="https://create.roblox.com/docs/characters" target="_blank">NPC</a> - Build and customize characters</li>
-            </ul>
-        </section>
+<div class="section">
+    <h2>Commands 💘</h2>
+    <ul>
+        <li><a href="https://github.com/F3XTeam/RBX-Building-Tools" target="_blank">F3X</a> <span class="rainbow-text">→ (Auto Updates)</span></li>
+        <li><a href="https://roblox.fandom.com/wiki/R6" target="_blank">R6</a> - <del>→ Blow stuff up and have fun!</del> <span>:(</span></li>
+        <li><a href="https://create.roblox.com/docs/characters" target="_blank">NPC</a></li>
+    </ul>
+</div>
 
         <!-- Credits Section -->
         <section class="section">
