--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
                 We proudly recognize the talented individuals and contributors whose efforts have shaped <strong>Saz</strong> into a robust and powerful tool. Special thanks to the following contributors:
             </p>
             <ul>
-                <li><a href="https://degenerates2.carrd.co/#l4zx16" target="_blank">4zx16</a> − Founder & Lead Developer</li>
+                <li><a href="https://github.com/4zx16" target="_blank">4zx16</a> − Founder & Lead Developer</li>
                 <li><a href="http://user.rblx.name/christopherdis" target="_blank">christopherdis</a> − User Interface Designer</li>
-                <li><a href="https://degenerates2.carrd.co/#l7zh14" target="_blank">7zh14</a> − Punishment Module Developer & Maintainer</li>
+                <li><a href="https://github.com/7zh14" target="_blank">7zh14</a> − Punishment Module Developer & Maintainer</li>
             </ul>
             <p>We deeply appreciate their commitment and hard work in making Saz an outstanding tool for the Roblox community.</p>
         </section>
